# unrealircd

./: .CHANGES.NEW  .CONFIG.RANT  .NEW_CONFIG  .RELEASE.NOTES  .SICI  .UPDATE  .bugreport.gdb  .cvsignore  .gitignore  .gitmodules  .hgeol  .hgignore  .indent.pro  .travis.yml  146.diff  152.diff  158.diff  159.diff  BSDmakefile  CONTRIBUTING.md  CREDITS.potential  Changes  Changes.old  Changes.older  Config  Donation  INSTALL  INSTALL.REMOTEINC  Makefile.dist  Makefile.in  Makefile.windows  README  README.BETA  README.md  READMENOW.Win32.txt  READTHIS.NOW  SECURITY.md  Setup  TODO  TSpre.doc  (+41 more)
.github/: FUNDING.yml
aliases/: aliases.conf  anope.conf  atheme.conf  auspice.conf  cygnus.conf  epona.conf  generic.conf  genericstats.conf  ircservices.conf  operstats.conf
autoconf/: Makefile  aclocal.m4  configure.ac  configure.in
autoconf/m4/: unreal.m4
config2/: aclocal.m4  configure.in
crypt/: Makefile  Makefile.in  README  crypter  mkpasswd.c
devel/: aln.doc  new.plines
doc/: ADD-TO-IRCRC  Authors  Changes.old  Changes.older  Config.header  Crule.readme  Elite.Changes  INSTALL  KEYS  Manual  Operators  RELEASE-NOTES  RELEASE-NOTES.md  RELEASE-NOTES.old  RELEASE.NOTES-3.1.4  Unreal31_to_32.html  coding-guidelines  commands.txt  compiling_win32.txt  conf.doc  crypto.doc  example.bg.conf  example.conf  example.de.conf  example.es.conf  example.fr.conf  example.hu.conf  example.nl.conf  example.ru.conf  example.settings  example.tr.conf  faq  features.txt  help.de.conf  help.fr.conf  help.ru.conf  help.tr.conf  irc.1  ircd.8  m4macros  (+18 more)
doc/History/: 19.mu1-New  2.8-New  Advertisement  Etiquette  README.patches
doc/conf/: badwords.channel.conf  badwords.conf  badwords.quit.conf  dccallow.conf  history.conf  modules.conf  modules.default.conf  modules.full.conf  modules.optional.conf  modules.sources.list  operclass.default.conf  rpc-class.default.conf  rpc.modules.default.conf  snomasks.default.conf  spamfilter.conf
doc/technical/: 005.txt  base64.txt  md.txt  protoctl.txt  serverprotocol.html  serverprotocol.txt  token.txt  vl.txt
extras/: VStudioAnalyze.ruleset  argon2-20181209.tar  burst.c  channeldumper.c  curlinstall  defizzer.c  extras.txt  m_rawto.c  malloc.c  tls.cnf  unreal.supp  unrealircd-upgrade-script  unrealircd-upgrade-script.in
extras/build-tests/: appveyor.build.bat  select-config
extras/doxygen/: Developers.md  Doxyfile  doxygen_custom.css  header.html
extras/libsodium-1.0.18/: Makefile  libsodium.pc  libtool
extras/patches/: patch_spamfilter_conf  spamfilter.conf.patch
extras/regex/: Makefile.in  configure  regex.c
extras/tre/: ChangeLog  Makefile.am  Makefile.in  NEWS  NOTICE  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.ac  tre.pc.in  tre.spec.in
extras/tre/doc/: tre-api.html  tre-syntax.html
extras/tre/lib/: Makefile.am  Makefile.in  README  regcomp.c  regerror.c  regex.h  regexec.c  tre-compile.c  tre-config.h.in  tre-internal.h  tre-match-approx.c  tre-match-backtrack.c  tre-match-parallel.c  tre-match-utils.h  tre-mem.c  tre-mem.h  xmalloc.c  xmalloc.h
extras/tre/m4/: Makefile.am  Makefile.in  tre_prog_cc_optimizations.m4  vl_check_sign.m4  vl_decl_wchar_max.m4  vl_prog_cc_warnings.m4
extras/tre/po/: fi.gmo  fi.po  tre.pot
extras/tre/src/: Makefile.am  Makefile.in  agrep.c
extras/tre/tests/: Makefile.am  Makefile.in  bench.c  retest.c  test-approx.c
extras/tre/utils/: Makefile.am  Makefile.in  autogen.sh
extras/tre/win32/: tre-config.h  tre.def  tre.dsp
extras/tsp/: Makefile  README  README.sscript  socker.c  sscript-lib.doc  sscript.c  sscript.h  tsp-client.c  tsp-server  tsp-server-run.c
html/: index.html
html/html/: index.phtml  main.html
include/: auth.h  badwords.h  channel.h  cio.h  ciofunc.h  class.h  common.h  config.h  dbuf.h  dns.h  dynconf.h  events.h  fdlist.h  h.h  hash.h  inet.h  ircsprintf.h  license.h  list.h  macros.h  md5.h  mempool.h  modules.h  modversion.h  msg.h  nameser.h  numeric.h  openssl_hostname_validation.h  proto.h  relinfo.h  res.h  resolv.h  resource.h  setup.h.in  sjoin.h  sock.h  ssl.h  stamp.h  struct.h  sys.h  (+8 more)
include/modules/: blackhole.h  scan.h
include/win32/: regex.h  settings.h  setup.h  tre-config.h
include/windows/: setup.h
ircdcron/: .cvsignore  ircd.cron  ircd.cron.in  ircdchk  ircdchk.in
networks/: 972-scripterz.network  action-irc.network  altirc.network  auspice.network  awesomechristians.network  axenet.network  bitchx.network  blind-irc.network  bunker7.network  burnnet.network  cabonet.network  cc2.network  chatcrap.network  chatplace.network  chatstation.network  chatuniverse.network  coolchat.network  ctcp.network  cynicnet.network  dark-core.network  darkfyre.network  darkkaos.network  darkwar.network  data-storm.network  digital-irc.network  digitalirc.network  discussioni.network  dragonwings.network  fireirc.network  flort.network  friendlyirc.network  gamescafe.network  geridnet.network  german-elite.network  german-global-irc.network  global-irc.network  globalchat.network  globo.network  icechat.network  infinity.network  (+63 more)
src/: .cvsignore  Config.c  Makefile  Makefile.in  agent.c  aliases.c  aln.c  api-apicallback.c  api-channelmode.c  api-clicap.c  api-command.c  api-efunctions.c  api-event.c  api-extban.c  api-history-backend.c  api-isupport.c  api-messagetag.c  api-moddata.c  api-mtag.c  api-rpc.c  api-usermode.c  auth.c  badwords.c  bsd.c  buildm4  buildmod  channel.c  charsys.c  chkconf.c  cidr.c  cio_init.c  cio_main.c  class.c  cloak.c  conf.c  conf_preprocessor.c  conftool.c  crashreport.c  crule.c  crypt_blowfish.c  (+93 more)
src/modules/: .cvsignore  Makefile  Makefile.in  account-notify.c  account-tag.c  addmotd.c  addomotd.c  admin.c  antimixedutf8.c  antirandom.c  authprompt.c  away.c  batch.c  blackhole.c  blacklist.c  cap.c  (+315 more)
u4modules/: Clients.module  Velcro.module
velcro/: build  changeuse.awk  converton.cc  copyrights.awk  createhooks.cc  epl  extensibleUse  extensibles.awk  extensibles.tmpl  generateCC  generateDepends.awk  generateH  part2.c  precompile  preprocess  stdmodule.tmpl  stdmodule_impl.tmpl  version.awk
(+453 files in other folders)
